--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="/skills/index.html">Skills</a></li>
                     <li><a href="/experience/index.html">Experience</a></li>
                     <li><a href="D:/WEB%20development/others%20websites/my/projects/index.html">Projects</a></li>
-                    <li><a href="D:/WEB%20development/others%20websites/my/contact/index.html">Contact Me</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
