--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://debjitpurohit.github.io/website/style.css">
     <link rel="shotcut icon" href="/img/debu.ico">
 </head>
 
