--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="stylesheet" href="https://debjitpurohit.github.io/website/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shotcut icon" href="/img/debu.ico">
 </head>
 
@@ -17,11 +17,10 @@
             <!-- Debjit -->
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="/education/index.html">Education</a></li>
-                    <li><a href="/skills/index.html">Skills</a></li>
-                    <li><a href="/experience/index.html">Experience</a></li>
-                    <li><a href="D:/WEB%20development/others%20websites/my/projects/index.html">Projects</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/">Home</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debedu.html">Education</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debskill.html">Skills</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debpro.html">Projects</a></li>
                     <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
                 </ul>
             </nav>
