--- a/debex.html
+++ b/debex.html
@@ -17,12 +17,11 @@
             <!-- Debjit -->
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/education/index.html">Education</a></li>
-                    <li><a href="/Skills/index.html/">Skills</a></li>
-                    <li><a href="/experience/index.html">Experience</a></li>
-                    <li><a href="/projects/index.html">Projects</a></li>
-                    <li><a href="/contact/index.html">Contact Me</a></li>
+                  <li><a href="https://debjitpurohit.github.io/website/">Home</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debedu.html">Education</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debskill.html">Skills</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debpro.html">Projects</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
