--- a/debcon.html
+++ b/debcon.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
     <link rel="shotcut icon" href="/img/debu.ico">
-    <link rel="stylesheet" href="file:///D:/WEB%20development/others%20websites/my/style.css">
+    <link rel="stylesheet" href="style.css">
 </script>
 </head>
 
@@ -80,6 +80,6 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 
 </html>
