--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shotcut icon" href="/img/debu.ico">
+    <link rel="shotcut icon" href="img/debu.ico">
 </head>
 
 <body>
