--- a/debcon.html
+++ b/debcon.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="shotcut icon" href="/img/debu.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shotcut icon" href="img/debu.ico">
+   <link rel="stylesheet" href="style.css">
 </script>
 </head>
 
@@ -29,8 +29,8 @@
         <!---------------------main content---------->
         <div class="main"> 
           <div class="hamberger">
-            <img id="ham" src="/img/dot.png" alt="" width="23px">
-            <img id="cross" src="/img/pngwing.com (1).png" alt="" width="23px">
+            <img id="ham" src="img/dot.png" alt="" width="23px">
+            <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
         </div>
      <div id="social">
           <a href="https://www.facebook.com/profile.php?id=100074103424096" target="blank">
