--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         I am Quick Learner with the Ability to Multi-task. Thrives in environment that constatly embrace new technologies.<span style='font-size:25px;'>&#128187;</span>
                     </div>
                     <div class="buttons">
-                        <a href="/DebjitPurohit_InternshalaResume-6.pdf" target="blank"><button id="deb">Download CV</button></a>
-                        <a href="/contact/index.html"><button>Contact Me</button></a>
+                        <a href="https://debjitpurohit.github.io/website/DebjitPurohit_InternshalaResume-6.pdf" target="blank"><button id="deb">Download CV</button></a>
+                        <a href="https://debjitpurohit.github.io/website/debcon.html"><button>Contact Me</button></a>
                     </div>
                 </div>
                 <div class="devpic"><img src="img/debu.png" alt="debjit purohit"></div>
