--- a/debedu.html
+++ b/debedu.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="shotcut icon" href="/img/debu.ico">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shotcut icon" href="img/debu.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
         <!---------------------main content---------->
         <div class="main">
             <div class="hamberger">
-                <img id="ham" src="/img/dot.png" alt="" width="23px">
-                <img id="cross" src="/img/pngwing.com (1).png" alt="" width="23px">
+                <img id="ham" src="img/dot.png" alt="" width="23px">
+                <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
             </div>
             <div id="education" class="middle">
                 <h1>Education</h1>
@@ -38,41 +38,41 @@
                     <div class="row">
                         <div class="col-md-6" id="rk">
                             <p class="institute-lang">Asansol <br>   Engineering College</p>
-                            <img height= "100px" width="300px" src="/img/downloadaec.jpg" alt="">
+                            <img height= "100px" width="300px" src="img/downloadaec.jpg" alt="">
                             <span>2021-2025 (expected)</span>
                         </div>
                         <div class="col-md-6" id="asn">
                             <p class="institute">Bachelor-Electronics and Communication Engineering</p>
                             <p>I am currently in my first year of college.</p>
-                            <img src="/img/location-pin.png" height="15px" width="15px" alt="">
+                            <img src="img/location-pin.png" height="15px" width="15px" alt="">
                             <span>Asansol ,West Bengal</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6" id="rk">
                             <p class="institute-lang">RamaKrishna Mission <br> Vidyapith</p>
-                            <img height= "120px" width="300px" src="/img/downloadrkp.jpg" alt="">
+                            <img height= "120px" width="300px" src="img/downloadrkp.jpg" alt="">
                             <span>2018-2020</span>
                         </div>
                         <div class="col-md-6" id="asn">
                             <p class="institute">HighSchool</p>
                             <p>I graduated HighSchool where I learned about English, Physics, Maths, Chemistry ,Biology.</p>
                             <p>WBCHSE - 88.6%</p>
-                            <img src="/img/location-pin.png" height="15px" width="15px" alt="">
+                            <img src="img/location-pin.png" height="15px" width="15px" alt="">
                             <span>Purulia</span>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6" id="rk">
                             <p class="institute-lang" >RamaKrishna Mission <br> Sarada Vidyapith</p>
-                            <img height= "120px" width="300px" src="/img/downloadrks.jpg" alt="">
+                            <img height= "120px" width="300px" src="img/downloadrks.jpg" alt="">
                             <span>2013-2018</span>
                         </div>
                         <div class="col-md-6" id="asn">
                             <p class="institute">Middle School</p>
                             <p>I persuied Middle school where my subjects were English, Bengali ,Math, PhysicalScience, LifeScience,History , Geography</p>
                             <p>WBBSE- 90.4%</p>
-                            <img src="/img/location-pin.png" height="15px" width="15px" alt="">
+                            <img src="img/location-pin.png" height="15px" width="15px" alt="">
                             <span>Joyrambati</span>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
             </div>
         </div>
 </div>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
