--- a/debpro.html
+++ b/debpro.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="shotcut icon" href="/img/debu.ico">
-    <link rel="stylesheet" href="D:/WEB%20development/others%20websites/my/style.css">
+    <link rel="shotcut icon" href="img/debu.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
         <!---------------------main content---------->
         <div class="main">
             <div class="hamberger">
-                <img id="ham" src="/img/dot.png" alt="" width="23px">
-                <img id="cross" src="/img/pngwing.com (1).png" alt="" width="23px">
+                <img id="ham" src="img/dot.png" alt="" width="23px">
+                <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
             </div>
             <h1 id="skill">Projects</h1>
             <hr color="green">
@@ -70,7 +70,7 @@
         </div>
 
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
