--- a/debskill.html
+++ b/debskill.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debjit Purohit - Web Developer , Programmer , Android Developer</title>
-    <link rel="shotcut icon" href="/img/debu.ico">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="shotcut icon" href="img/debu.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,23 +28,23 @@
         <!---------------------main content---------->
         <div class="main">
             <div class="hamberger">
-                <img id="ham" src="/img/dot.png" alt="" width="23px">
-                <img id="cross" src="/img/pngwing.com (1).png" alt="" width="23px">
+                <img id="ham" src="img/dot.png" alt="" width="23px">
+                <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
             </div>
            <h1 id="skill">My skills</h1>
            <hr color="green">
            <div class="skillimages">
-               <img src="/img/pngwing.com.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/pngaaa.com-5331509.png" alt="" srcset="" width="90px" height="100px">
-               <img src="/img/kisspng-javascript-logo-html-comment-blog-5ae63c23139110.5436874015250381150802.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/kisspng-node-js-javascript-web-application-express-js-comp-5ae0f84e5e7537.0464945815246930703869.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/kisspng-bootstrap-responsive-web-design-web-development-lo-5af676c0755361.6918533815261016964806.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/clipart2381243.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/kisspng-c-programming-language-logo-microsoft-visual-stud-atlas-portfolio-5b899192d7c600.1628571115357423548838.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/pngegg.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/kisspng-github-computer-icons-computer-software-github-5ac01a36197813.4123370315225390621043.png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/pngegg (1).png" alt="" srcset="" width="100px" height="100px">
-               <img src="/img/pngaaa.com-1969301.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/pngwing.com.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/pngaaa.com-5331509.png" alt="" srcset="" width="90px" height="100px">
+               <img src="img/kisspng-javascript-logo-html-comment-blog-5ae63c23139110.5436874015250381150802.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/kisspng-node-js-javascript-web-application-express-js-comp-5ae0f84e5e7537.0464945815246930703869.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/kisspng-bootstrap-responsive-web-design-web-development-lo-5af676c0755361.6918533815261016964806.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/clipart2381243.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/kisspng-c-programming-language-logo-microsoft-visual-stud-atlas-portfolio-5b899192d7c600.1628571115357423548838.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/pngegg.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/kisspng-github-computer-icons-computer-software-github-5ac01a36197813.4123370315225390621043.png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/pngegg (1).png" alt="" srcset="" width="100px" height="100px">
+               <img src="img/pngaaa.com-1969301.png" alt="" srcset="" width="100px" height="100px">
            </div>
            <hr color="green">
            <div class="skillcontainer">
@@ -65,7 +65,7 @@
         
         </div>
 </div>
-<script src="/index.js"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
