--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="https://debjitpurohit.github.io/website/">Home</a></li>
                     <li><a href="https://debjitpurohit.github.io/website/debedu.html">Education</a></li>
                     <li><a href="https://debjitpurohit.github.io/website/debskill.html">Skills</a></li>
+                    <li><a href="https://debjitpurohit.github.io/website/debex.html">Experience</a></li>
                     <li><a href="https://debjitpurohit.github.io/website/debpro.html">Projects</a></li>
                     <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
                 </ul>
