--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <!-- Debjit -->
             <nav>
                 <ul>
-                    <li><a href="https://debjitpurohit.github.io/website/">Home</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debedu.html">Education</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debskill.html">Skills</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debex.html">Experience</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debpro.html">Projects</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/">Home</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debedu.html">Education</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debskill.html">Skills</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debex.html">Experience</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debpro.html">Projects</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debcon.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,8 +44,8 @@
                         I am Quick Learner with the Ability to Multi-task. Thrives in environment that constatly embrace new technologies.<span style='font-size:25px;'>&#128187;</span>
                     </div>
                     <div class="buttons">
-                        <a href="https://debjitpurohit.github.io/website/DebjitPurohit_InternshalaResume-6.pdf" target="blank"><button id="deb">Download CV</button></a>
-                        <a href="https://debjitpurohit.github.io/website/debcon.html"><button>Contact Me</button></a>
+                        <a href="https://debjitpurohit.github.io/Debjits-World/DebjitPurohit_InternshalaResume-6.pdf" target="blank"><button id="deb">Download CV</button></a>
+                        <a href="https://debjitpurohit.github.io/Debjits-World/debcon.html"><button>Contact Me</button></a>
                     </div>
                 </div>
                 <div class="devpic"><img src="img/debu.png" alt="debjit purohit"></div>
