--- a/debex.html
+++ b/debex.html
@@ -17,11 +17,12 @@
             <!-- Debjit -->
             <nav>
                 <ul>
-                  <li><a href="https://debjitpurohit.github.io/website/">Home</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debedu.html">Education</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debskill.html">Skills</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debpro.html">Projects</a></li>
-                    <li><a href="https://debjitpurohit.github.io/website/debcon.html">Contact Me</a></li>
+                 <li><a href="https://debjitpurohit.github.io/Debjits-World/">Home</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debedu.html">Education</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debskill.html">Skills</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debex.html">Experience</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debpro.html">Projects</a></li>
+                    <li><a href="https://debjitpurohit.github.io/Debjits-World/debcon.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
