--- a/debcon.html
+++ b/debcon.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div id="preloader"></div>
     <div class="container">
         <!------------------sidebar----------------->
         <div class="sidebar sidebargo">
@@ -33,6 +34,7 @@
             <img id="ham" src="img/dot.png" alt="" width="23px">
             <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
         </div>
+        <!-- <img src="/img/moon.png" id="icon">  -->
      <div id="social">
           <a href="https://www.facebook.com/profile.php?id=100074103424096" target="blank">
             <ion-icon name="logo-facebook"></ion-icon></a>
