--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
     <div class="container">
         <!------------------sidebar----------------->
         <div class="sidebar sidebargo">
@@ -28,6 +29,7 @@
         </div>
         <!---------------------main content---------->
         <div class="main">
+            <!-- <img src="img/moon.png" id="icon">  -->
             <div class="hamberger">
                 <img id="ham" src="img/dot.png" alt="" width="23px">
                 <img id="cross" src="img/pngwing.com (1).png" alt="" width="23px">
@@ -51,9 +53,11 @@
                 <div class="devpic"><img src="img/debu.png" alt="debjit purohit"></div>
 
             </div>
-            <!-- <img src="moon.png" id="icon"> -->
+            
         </div>
+        <!-- <img src="moon.png" id="icon"> -->
 </div>
+
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="index.js"></script>
