--- a/debpro.html
+++ b/debpro.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
     <div class="container">
         <!------------------sidebar----------------->
         <div class="sidebar sidebargo">
